[build-system]
requires = [
  "hatchling",
#  "enforce_typing"
]
build-backend = "hatchling.build"

[project]
name = "pybundlr"
version = "0.0.2"
authors = [
  { name="Trent McConaghy", email="gtrent@gmail.com" },
]
description = "Simple py driver for bundlr"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/oceanprotocol/pybundlr"
"Bug Tracker" = "https://github.com/oceanprotocol/pybundlr/issues"